@@ -1,3 +1,8 @@
+2000-10-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Drawable.cpp (DrawableStrokeColor): Renamed from DrawableStroke
+	(DrawableFillColor): Renamed from DrawableFill
+
 2000-10-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (DrawableAffine): New class to influence text
